wxc/include/ewxw/wxc_glue.h

void       wxDateTime_AddDateValues( TSelf(wxDateTime) _obj, int _yrs, int _mnt, int _wek, int _day );
void       wxDateTime_AddTime( TSelf(wxDateTime) _obj, void* diff, TClassRef(wxDateTime) _ref );
void       wxDateTime_AddTimeValues( TSelf(wxDateTime) _obj, int _hrs, int _min, int _sec, int _mls );
int        wxDateTime_ConvertYearToBC( int year );
TClass(wxDateTime) wxDateTime_Create(  );
TStringLen wxDateTime_Format( TSelf(wxDateTime) _obj, void* format, int tz, TStringOutVoid _buf );
TStringLen wxDateTime_FormatDate( TSelf(wxDateTime) _obj, TStringOutVoid _buf );
TStringLen wxDateTime_FormatISODate( TSelf(wxDateTime) _obj, TStringOutVoid _buf );
TStringLen wxDateTime_FormatISOTime( TSelf(wxDateTime) _obj, TStringOutVoid _buf );
TStringLen wxDateTime_FormatTime( TSelf(wxDateTime) _obj, TStringOutVoid _buf );
TStringLen wxDateTime_GetAmString( TStringOutVoid _buf );
void       wxDateTime_GetBeginDST( int year, int country, TClass(wxDateTime) dt );
int        wxDateTime_GetCentury( int year );
int        wxDateTime_GetCountry(  );
int        wxDateTime_GetCurrentMonth( int cal );
int        wxDateTime_GetCurrentYear( int cal );
int        wxDateTime_GetDay( TSelf(wxDateTime) _obj, int tz );
int        wxDateTime_GetDayOfYear( TSelf(wxDateTime) _obj, int tz );
void       wxDateTime_GetEndDST( int year, int country, TClass(wxDateTime) dt );
int        wxDateTime_GetHour( TSelf(wxDateTime) _obj, int tz );
void       wxDateTime_GetLastMonthDay( TSelf(wxDateTime) _obj, int month, int year, TClassRef(wxDateTime) _ref );
void       wxDateTime_GetLastWeekDay( TSelf(wxDateTime) _obj, int weekday, int month, int year, TClassRef(wxDateTime) _ref );
int        wxDateTime_GetMillisecond( TSelf(wxDateTime) _obj, int tz );
int        wxDateTime_GetMinute( TSelf(wxDateTime) _obj, int tz );
int        wxDateTime_GetMonth( TSelf(wxDateTime) _obj, int tz );
TStringLen wxDateTime_GetMonthName( int month, int flags, TStringOutVoid _buf );
void       wxDateTime_GetNextWeekDay( TSelf(wxDateTime) _obj, int weekday, TClassRef(wxDateTime) _ref );
int        wxDateTime_GetNumberOfDays( int year, int cal );
int        wxDateTime_GetNumberOfDaysMonth( int month, int year, int cal );
TStringLen wxDateTime_GetPmString( TStringOutVoid _buf );
void       wxDateTime_GetPrevWeekDay( TSelf(wxDateTime) _obj, int weekday, TClassRef(wxDateTime) _ref );
int        wxDateTime_GetSecond( TSelf(wxDateTime) _obj, int tz );
time_t     wxDateTime_GetTicks( TSelf(wxDateTime) _obj );
int        wxDateTime_GetTimeNow(  );
void       wxDateTime_GetValue( TSelf(wxDateTime) _obj, void* hi_long, void* lo_long );
void       wxDateTime_GetWeek( TSelf(wxDateTime) _obj, int numWeek, int weekday, TClassRef(wxDateTime) _ref );
void       wxDateTime_GetWeekDay( TSelf(wxDateTime) _obj, int weekday, int n, int month, int year, TClassRef(wxDateTime) _ref );
void       wxDateTime_GetWeekDayInSameWeek( TSelf(wxDateTime) _obj, int weekday, TClassRef(wxDateTime) _ref );
TStringLen wxDateTime_GetWeekDayName( int weekday, int flags, TStringOutVoid _buf );
int        wxDateTime_GetWeekDayTZ( TSelf(wxDateTime) _obj, int tz );
int        wxDateTime_GetWeekOfMonth( TSelf(wxDateTime) _obj, int flags, int tz );
int        wxDateTime_GetWeekOfYear( TSelf(wxDateTime) _obj, int flags, int tz );
int        wxDateTime_GetYear( TSelf(wxDateTime) _obj, int tz );
TBool      wxDateTime_IsBetween( TSelf(wxDateTime) _obj, TClass(wxDateTime) t1, TClass(wxDateTime) t2 );
TBool      wxDateTime_IsDST( TSelf(wxDateTime) _obj, int country );
TBool      wxDateTime_IsDSTApplicable( int year, int country );
TBool      wxDateTime_IsEarlierThan( TSelf(wxDateTime) _obj, void* datetime );
TBool      wxDateTime_IsEqualTo( TSelf(wxDateTime) _obj, void* datetime );
TBool      wxDateTime_IsEqualUpTo( TSelf(wxDateTime) _obj, TClass(wxDateTime) dt, void* ts );
TBool      wxDateTime_IsLaterThan( TSelf(wxDateTime) _obj, void* datetime );
TBool      wxDateTime_IsLeapYear( int year, int cal );
TBool      wxDateTime_IsSameDate( TSelf(wxDateTime) _obj, TClass(wxDateTime) dt );
TBool      wxDateTime_IsSameTime( TSelf(wxDateTime) _obj, TClass(wxDateTime) dt );
TBool      wxDateTime_IsStrictlyBetween( TSelf(wxDateTime) _obj, TClass(wxDateTime) t1, TClass(wxDateTime) t2 );
TBool      wxDateTime_IsValid( TSelf(wxDateTime) _obj );
TBool      wxDateTime_IsWestEuropeanCountry( int country );
TBool      wxDateTime_IsWorkDay( TSelf(wxDateTime) _obj, int country );
void       wxDateTime_MakeGMT( TSelf(wxDateTime) _obj, int noDST );
void       wxDateTime_MakeTimezone( TSelf(wxDateTime) _obj, int tz, int noDST );
void       wxDateTime_Now( TSelf(wxDateTime) dt );
void*      wxDateTime_ParseDate( TSelf(wxDateTime) _obj, void* date );
void*      wxDateTime_ParseDateTime( TSelf(wxDateTime) _obj, void* datetime );
void*      wxDateTime_ParseFormat( TSelf(wxDateTime) _obj, void* date, void* format, void* dateDef );
void*      wxDateTime_ParseRfc822Date( TSelf(wxDateTime) _obj, void* date );
void*      wxDateTime_ParseTime( TSelf(wxDateTime) _obj, TClass(wxTime) time );
void       wxDateTime_ResetTime( TSelf(wxDateTime) _obj );
void       wxDateTime_Set( TSelf(wxDateTime) _obj, int day, int month, int year, int hour, int minute, int second, int millisec );
void       wxDateTime_SetCountry( int country );
void       wxDateTime_SetDay( TSelf(wxDateTime) _obj, int day );
void       wxDateTime_SetHour( TSelf(wxDateTime) _obj, int hour );
void       wxDateTime_SetMillisecond( TSelf(wxDateTime) _obj, int millisecond );
void       wxDateTime_SetMinute( TSelf(wxDateTime) _obj, int minute );
void       wxDateTime_SetMonth( TSelf(wxDateTime) _obj, int month );
void       wxDateTime_SetSecond( TSelf(wxDateTime) _obj, int second );
void       wxDateTime_SetTime( TSelf(wxDateTime) _obj, int hour, int minute, int second, int millisec );
void       wxDateTime_SetToCurrent( TSelf(wxDateTime) _obj );
void       wxDateTime_SetToLastMonthDay( TSelf(wxDateTime) _obj, int month, int year );
int        wxDateTime_SetToLastWeekDay( TSelf(wxDateTime) _obj, int weekday, int month, int year );
void       wxDateTime_SetToNextWeekDay( TSelf(wxDateTime) _obj, int weekday );
void       wxDateTime_SetToPrevWeekDay( TSelf(wxDateTime) _obj, int weekday );
int        wxDateTime_SetToTheWeek( TSelf(wxDateTime) _obj, int numWeek, int weekday );
int        wxDateTime_SetToWeekDay( TSelf(wxDateTime) _obj, int weekday, int n, int month, int year );
void       wxDateTime_SetToWeekDayInSameWeek( TSelf(wxDateTime) _obj, int weekday );
void       wxDateTime_SetYear( TSelf(wxDateTime) _obj, int year );
void       wxDateTime_SubtractDate( TSelf(wxDateTime) _obj, void* diff, TClassRef(wxDateTime) _ref );
void       wxDateTime_SubtractTime( TSelf(wxDateTime) _obj, void* diff, TClassRef(wxDateTime) _ref );
void       wxDateTime_ToGMT( TSelf(wxDateTime) _obj, int noDST );
void       wxDateTime_ToTimezone( TSelf(wxDateTime) _obj, int tz, int noDST );
void       wxDateTime_Today( TSelf(wxDateTime) dt );
void       wxDateTime_UNow( TSelf(wxDateTime) dt );
void*      wxDateTime_wxDateTime( int hi_long, int lo_long );